Rename App Name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "linko",
+  "name": "HealthAssist",
   "description": "Dont lose your prescription again",
   "main": "server.js",
   "authors": [
