--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Mohammed Maaz",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^1.0.1",
+    "bcryptjs": "2.4.3",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
     "chalk": "^1.1.3",
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.2",
     "arraylist": "^0.1.0",
-    "camaro": "^3.0.8",
+    "camaro": "2.2.2",
     "cheerio": "^1.0.0-rc.2",
     "file-name": "^0.1.0",
     "hashmap": "^2.3.0",
